<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/healderlayout"
        style="@style/fillWidth"
        android:layout_height="40dip"
        android:background="@drawable/header" >

        <TextView
            android:id="@+id/heading1"
            style="@style/Headertitle"
            android:layout_centerInParent="true"
            android:text="@string/account" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:src="@drawable/univercell_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:drawableLeft="@drawable/usernameicon"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:digits="1234567890"
                android:drawableLeft="@drawable/phoneicon"
                android:ems="10"
                android:hint="@string/ph_no"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="10" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/bSkip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_blue_clickable"
                    android:text="@string/skip"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_blue_clickable"
                    android:text="@string/register"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>