<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical"
    android:padding="0dp" >

    <RelativeLayout
        android:id="@+id/healderlayout"
        style="@style/fillWidth"
        android:layout_height="40dip"
        android:background="@drawable/header" >

        <TextView
            android:id="@+id/heading1"
            style="@style/Headertitle"
            android:layout_centerInParent="true"
            android:text="@string/cart" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <LinearLayout
            android:id="@+id/lvInfoItems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/coupon"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/coupon_code"
            android:lines="1"
            android:maxLength="20"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_clickable"
            android:text="@string/apply"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/discountLayout"
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:background="@drawable/silver"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dip"
            android:text="@string/discount"
            android:textColor="@drawable/best_deal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/symbol_rup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dip"
            android:text="@string/price"
            android:textColor="@drawable/best_deal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/price"
            android:textColor="@drawable/best_deal"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:background="@drawable/silver"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dip"
            android:text="@string/grand_total"
            android:textColor="@drawable/best_deal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/symbolRupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dip"
            android:text="@string/price"
            android:textColor="@drawable/best_deal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gTotal"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/price"
            android:textColor="@drawable/best_deal"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_clickable"
            android:text="@string/continue1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_clickable"
            android:text="@string/checkout"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>